# Patterns

./: pyproject.toml  user.py
builder_pattern/: builders.py  director.py  main.py  product.py
chain_of_responsibilities/: chain.py  main.py
factory/: cryptocurrencies.py  descriptors.py  main.py  wallets.py
singelton/: main.py  queue_implementation.py
strategy_pattern/: exceptions.py  main.py  strategy.py
