[tool.poetry]
name = "patterns"
version = "0.1.0"
description = "\"Patterns implementation\""
authors = ["Vladyslav Movchan <vladyslav.movchan@nixsolutions.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
